##Text encoding: utf-8

2011-07-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: redesign progress.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/cleavagesdlg.cc: fixed "Delete All" buttn sensitivity.

2011-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: add a GrcGrid for the atom list.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/cleavagesdlg.cc: restore missing label.
	* libs/gcr/document.cc: move Define() method from programs/crystal and fixed
	crash when a dialog is called twice.
	* libs/gcr/document.h: ditto.
	* libs/gcr/grid.cc: add protected columns and mouse wheel scrolling support.
	* programs/crystal/document.cc: move Define() method to parent class.
	* programs/crystal/document.h: ditto.
	* ui/crystal/atoms.ui: redesigned.
	* ui/crystal/cleavages.ui: restore missing label.

2011-07-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: start redesign work.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance navigation, and add some support for strings.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/atoms.ui: start redesign work.

2011-07-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavage.cc: make cleaved planes number unsigned.
	* libs/gcr/cleavage.h: ditto.
	* libs/gcr/cleavagesdlg.cc: add checks for cleavages validity.
	* libs/gcr/document.cc: ditto.
	* libs/gcr/grid.cc: implement unsigned int support, double click and
	validity checks.
	* libs/gcr/grid.h: ditto.

2011-07-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: really implement cleavage change.
	* libs/gcr/grid.cc: make it start being really usable.

2011-07-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: implement cleavage change.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/document.cc: add a new method to check cleavages list coherence.
	* libs/gcr/document.h: ditto.
	* libs/gcr/grid.cc: more keyboard interaction.